# too-many-timestamps

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: qa.yml  release.yml
completions/: _timestamps.zsh
src/: args.rs  lib.rs  parsing.rs  printit.rs  timestamps.rs  types.rs
