[package]
name = "too-many-timestamps"
description = "Simple CLI tool to interpret and convert UNIX timestamps"
version = "0.1.0"
authors = ["0x5c <dev@0x5c.io>"]
license = "LiLiQ-Rplus-1.1"
edition = "2018"

[[bin]]
name = "timestamps"
path = "src/timestamps.rs"

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.4"
crossterm = "0.22"
anyhow = "1.0"
