[package]
name = "too-many-timestamps"
description = "Simple CLI tool to interpret and convert UNIX timestamps"
version = "0.1.0"
authors = ["0x5c <dev@0x5c.io>"]
license = "LiLiQ-Rplus-1.1"
edition = "2018"

[[bin]]
name = "timestamps"
path = "src/timestamps.rs"

[dependencies]
chrono = {version = "0.4", default-features = false, features = ["std", "now"]}
clap = {version = "4.0.0", default-features = false, features = ["std", "help", "usage", "error-context", "cargo"]}
crossterm = {version = "0.27", default_features = false}
anyhow = "1.0"
